# TP_Rust

./: Cargo.toml  README.md  donnees.csv  fichier test.txt
src/: asynchrone.rs  compteBancaire.rs  ecrire.rs  fichier.rs  lire.rs  main.rs  tp0.rs  tp1.rs  tp3.rs  tp4.rs  tp7.rs  tp8.rs  tp9.rs
src/tp7/: client.rs  server.rs
src/tp8/: client.rs  protocol.rs  server.rs
src/tp9/: client.rs  server.rs
