[package]
name = "tp1"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = {version="0.4", features=["serde","clock"]}
csv = "1.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
tungstenite = "0.27"
futures = "0.3"
futures-util = "0.3.31"
url = "2.5.4"
